# tasteofcinemaarabi

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  skills-lock.json  test-bcrypt.js  test-next-env.js  vitest.config.ts
.agent/rules/: specify-rules.md
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
content/: 10-great-crime-thriller-movies-you-probably-havent-seen.mdx  20-mentally-disturbed-movie-characters-oscar-loved.mdx  all-12-netflix-best-picture-nominees-ranked-from-worst-to-best.mdx  all-25-best-picture-winners-of-the-21st-century-ranked-from-worst-to-best.mdx  all-8-safdie-brothers-movies-ranked-from-worst-to-best.mdx  best-picture-winners-21st-century-ranked.mdx  the-10-best-thriller-movies-of-2025.mdx  the-10-most-underrated-movies-of-2025.mdx
data/: banned-patterns.json  cinema.db  glossary.json  protected-terms.json  schema.sql  style-guide.ts
docs/: PLAN-cinema-cms.md  PLAN-mdx-compile-fix.md  admin-credentials.md
scraper/: HOWTO-ar.md  README.md  discover.py  extract.py  images.py  manifest.py  models.py  pyproject.toml  scraper.py
scraper/tests/: conftest.py  test_discover.py  test_extract.py  test_filter.py  test_images.py  test_manifest.py  test_scraper.py  test_sort.py
scripts/: backfill-mdx-format.ts  cleanup-mdx.ts  db-migrate-fresh.ts  db-migrate-status.ts  db-seed.ts  setup-db.ts
specs/001-article-scraper/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cinema-cms/: clarify-report.md  data-model.md  plan.md  quickstart.md  (+3 more)
src/: middleware.ts
(+152 files in other folders)
