[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tasteofcinema-scraper"
version = "0.1.0"
description = "Bulk content scraper for tasteofcinema.com"
requires-python = ">=3.10"
dependencies = [
    "scrapling>=0.2",
    "pydantic>=2.0",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "responses>=0.25",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scraper*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
